--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ email: anthenderson89@gmail.com
 avatar: assets/images/profilepic.jpg
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: https://mrhenderson89.github.io/
-url: https://mrhenderson89.github.io/
+baseurl: "/"
+url: "/"
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
