--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ avatar: assets/images/profilepic.jpg
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "/"
-url: "https://mrhenderson89.github.io/"
+url: "https://mrhenderson89.github.io"
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
