--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ google_analytics:
 # theme: jekyll-theme-prologue
 remote_theme: chrisbobbe/jekyll-theme-prologue
 collections: [sections]
+  projects:
 
 prose:
   rooturl: ''
