--- a/_config.yml
+++ b/_config.yml
@@ -59,16 +59,9 @@ google_analytics:
 # The following settings are NECESSARY for the Prologue theme to run:
 # theme: jekyll-theme-prologue
 remote_theme: chrisbobbe/jekyll-theme-prologue
-collections: [sections]
-
-collections:
-  plant_sensor:
-    output: true
-    title: Plant Sensor
-    title_singular: Plant Sensor
-    description: A project to read sensor values from a pot plant, to help it grow the best I can
-    sequence: 2
-    background_image_url: ""
+collections: 
+  projects:
+      output: true
 
 prose:
   rooturl: ''
