--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,8 @@ google_analytics:
 # The following settings are NECESSARY for the Prologue theme to run:
 # theme: jekyll-theme-prologue
 remote_theme: chrisbobbe/jekyll-theme-prologue
-collections: 
-  projects:
-      output: true
+collections: [sections]
+
 
 prose:
   rooturl: ''
