--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: "ant henderson"
 description: "My thoughts and ideas. In website form."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /
-google_analytics: ''
+baseurl: /mediumish-theme-jekyll
+google_analytics: 'UA-46278016-1'
 disqus: 'demowebsite'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
