Removing dummy posts

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink: /:title/
 
 # Authors
 authors:
-  sal:
+  ant:
     name: ant
     display_name: ant
     gravatar: 4fa7a9c71144a2db6c3b92eb99772438
