--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ favicon: 'assets/images/emblemmatic-ant-henderson-logo-43.png'
 baseurl: /
 google_analytics: ''
 disqus: ''
-mailchimp-list: ''
+mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
 
